<resources>
    <string name="app_name">Travelling</string>
    <string name="next">Next</string>
    <string name="title">Tu App de Viajes</string>
    <string name="app_description">Hola, estamos buscando a millones de usuarios con inquietudes y ganas de viajar. Si eres tú? No lo dudes, accede a nuestra app y descubrirás miles de destinos y facilidades para alquilar coches, ver el tiempo…</string>
    <string name="upcomingmeetups">"Upcoming meetups "</string>
    <string name="location1">USA, Los Angeles - 2 Weeks</string>
    <string name="city1">City of Los Angeles</string>
    <string name="location2">Maldives - 3 weeks</string>
    <string name="city2">Beach vacation</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="get_new">Get new</string>
    <string name="have_account">Do you have an account?</string>
    <string name="coming_soon">Esta funcionalidad estará próximamente</string>
    <string name="register">Registro</string>
    <string name="user_name">¿Cómo te llamas?</string>
    <string name="user_surname">¿Y tu apellido?</string>
    <string name="btRegister">Me apunto</string>
    <string name="conditions">Ver Condiciones</string>
    <string name="privacy">Política de privacidad</string>
    <string name="user_age">¿Cuántos años tienes?</string>
    <string name="create_new">Create new</string>
    <string name="bad_request">Vaya! Algo salió mal</string>
    <string name="welcome">Bienvenido</string>
    <string name="home">Home</string>
    <string name="eurodisney">Eurodisney</string>
    <string name="rent_a_car">Alquila un coche</string>
    <string name="back">Atrás</string>
    <string name="verify_data">Verifique los datos</string>
    <string name="autentication_error">Error de autenticación</string>
    <string name="understood">Entendido</string>
    <string name="photo">Imágenes</string>
    <string name="favourites">Favoritos</string>
    <string name="travel">Viajes</string>
    <string name="profile">Perfil</string>
    <string name="imagen_viaje">Foto del viaje</string>
    <string name="welcome_home">Bienvenido %1$s %2$s</string>

    <string-array name="age_range">
        <item>0–5</item>
        <item>6–11</item>
        <item>12–17</item>
        <item>18–99</item>
    </string-array>
    <string name="findMatch">Find Your Match</string>
    <string name="matchHelp">We´ve helped millions across the nation find their perfect match… and you´re next!</string>
    <string name="skip">Skip</string>
    <string name="perfectRoomate">Find the Perfect Roommate</string>
    <string name="price">$%.0f/day</string>
    <string name="transport">Ha elegido: %s</string>
    <string name="typeCar">%s Car</string>
    <string name="vehicle_title">Tipos de vehículos</string>
    <string name="requiredPermission">Permisos necesarios</string>
    <string name="permissionDescription">Es necesario activar la localización para poder ofrecer las mejores ofertas en alojamientos</string>
    <string name="settings">Ajustes</string>
    <string name="exit">Salir</string>
    <string name="notification_text">Nos alegra verte en este paraíso</string>
    <string name="channel_name">Login Channel</string>
    <string name="channel_description">Notificación que aparece al hacer login</string>
</resources>
