<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/ob1Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ob1Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:lineHeight="25dp"
            android:padding="6dp"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ob1Image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Main Image"
            android:src="@drawable/nomads_moto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".9"
        android:background="@color/grey_dark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ob2NextBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center"
            android:text="@string/next"
            android:textColor="@color/grey_light"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>