<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingHorizontal="32dp"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="32dp"
        app:layout_constraintBottom_toTopOf="@id/layoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen_registro" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/ivRegister"
        app:layout_constraintEnd_toEndOf="@id/ivRegister"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@id/ivRegister"
        app:layout_constraintTop_toTopOf="@id/ivRegister"
        app:layout_constraintVertical_bias="0.766"
        app:srcCompat="@drawable/baseline_add_a_photo_white_24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/layoutSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRegister"
        app:startIconDrawable="@drawable/baseline_face_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            style="@style/Register_EditText"
            android:hint="@string/user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/layoutAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutName"
        app:startIconDrawable="@drawable/baseline_face_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurname"
            style="@style/Register_EditText"
            android:hint="@string/user_surname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="dropdown_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSurname">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/acRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_age"
            android:inputType="none"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/btRegister"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/tvConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginEnd="10dp"
        android:text="@string/privacity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvConditions"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditions"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvPrivacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPrivacy"
        app:layout_constraintTop_toTopOf="@id/tvPrivacy" />

</androidx.constraintlayout.widget.ConstraintLayout>